# humasoft-yarp-devices

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/find-modules/: Findfcontrol.cmake
doc/: graphics-guide.md  groups.dox  softarm-usage.md  softneck-usage.md  yarp-device-usage.md  yarp-devices-install.md
examples/closedLoopExample/: CMakeLists.txt  closedLoopExample.cpp
examples/closedLoopSpaceMouse/: CMakeLists.txt  closedLoopSpaceMouse.cpp
examples/closedLoopSpaceMouse/buttonPositionSend/: buttonPositionSend.cpp
examples/closedLoopSpaceMouse/continuousPositionSend/: CMakeLists.txt  continuousPositionSend.cpp  continuousPositionSend.cpp.autosave  data.csv  data.xlsx
examples/cpp/periodicThread/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/SensorIntegrationLib/: CMakeLists.txt  attitude_estimator.cpp  imu3dmgx510.h  (+2 more)
libraries/YarpPlugins/: CMakeLists.txt  Doxyfile
libraries/YarpPlugins/Imu/: CMakeLists.txt  DeviceDriverImuImpl.cpp  Imu.cpp  PeriodicThreadImu.cpp  imudevice.hpp
libraries/YarpPlugins/Mocap/: CMakeLists.txt  DeviceDriverMocapImpl.cpp  Mocap.cpp  PeriodicThreadMOCAP.cpp  mocapdevice.hpp
libraries/YarpPlugins/SoftArmControl/: CMakeLists.txt  DeviceDriverImpl.cpp  ICartesianControlImpl.cpp  IMU3DMGX510StreamResponder.cpp  Kinematics.cpp  MocapStreamResponder.cpp  PeriodicThreadImpl.cpp  SensorStreamResponder.cpp  SoftArmControl.cpp  SoftArmControl.hpp
libraries/YarpPlugins/SoftNeckControl/: CMakeLists.txt  DeviceDriverImpl.cpp  ICartesianControlImpl.cpp  IMU3DMGX510StreamResponder.cpp  IMUSerialStreamResponder.cpp  Kinematics.cpp  MocapStreamResponder.cpp  PeriodicThreadImpl.cpp  SerialStreamResponder.cpp  SoftNeckControl.cpp  SoftNeckControl.hpp
libraries/YarpPlugins/SoftNeckImu/: DeviceDriverIMUImpl.cpp  PeriodicThreadIMU.cpp  SoftNeckIMU.cpp  imudevice.hpp
libraries/YarpPlugins/SoftNeckImu/sensor-integration/: CMakeLists.txt  SerialComm.cpp  attitude_estimator.cpp  imu3dmgx510.cpp  imu3dmgx510.h
libraries/YarpPlugins/SoftNeckMocap/: CMakeLists.txt  DeviceDriverMocapImpl.cpp  PeriodicThreadMOCAP.cpp  SoftNeckMOCAP.cpp  mocapdevice.hpp
libraries/YarpPlugins/SoftNeckMocap/lib/: CMakeLists.txt
libraries/YarpPlugins/SoftNeckSensors/: CMakeLists.txt  DeviceDriverIMUImpl.cpp  PeriodicThreadIMU.cpp  Readings.cpp  SerialStreamResponder_IMU.cpp  SoftNeckIMU.cpp  imudevice.h  imudevice.hpp
libraries/YarpPlugins/SoftNeckSensors/sensor-integration/: CMakeLists.txt  README.md  SerialComm.cpp  SerialComm.h  imu3dmgx510.cpp  imu3dmgx510.h
libraries/YarpPlugins/docs/: DeviceDriverImpl_8cpp.html  DeviceDriverImpl_8cpp__incl.map  DeviceDriverImpl_8cpp__incl.md5  ICartesianControlImpl_8cpp.html  ICartesianControlImpl_8cpp__incl.map  ICartesianControlImpl_8cpp__incl.md5  Kinematics_8cpp.html  Kinematics_8cpp__incl.map  Kinematics_8cpp__incl.md5  PeriodicThreadImpl_8cpp.html  PeriodicThreadImpl_8cpp__incl.map  PeriodicThreadImpl_8cpp__incl.md5  SerialStreamResponder_8cpp.html  SerialStreamResponder_8cpp__incl.map  SerialStreamResponder_8cpp__incl.md5  SoftNeckControl_8cpp.html  SoftNeckControl_8cpp__incl.map  SoftNeckControl_8cpp__incl.md5  SoftNeckControl_8hpp.html  SoftNeckControl_8hpp__dep__incl.map  SoftNeckControl_8hpp__dep__incl.md5  SoftNeckControl_8hpp__incl.map  SoftNeckControl_8hpp__incl.md5  SoftNeckControl_8hpp_source.html  annotated.html  classes.html  classhumasoft_1_1SerialStreamResponder-members.html  classhumasoft_1_1SerialStreamResponder.html  classhumasoft_1_1SerialStreamResponder__coll__graph.map  classhumasoft_1_1SerialStreamResponder__coll__graph.md5  classhumasoft_1_1SerialStreamResponder__inherit__graph.map  classhumasoft_1_1SerialStreamResponder__inherit__graph.md5  classhumasoft_1_1SoftNeckControl-members.html  classhumasoft_1_1SoftNeckControl.html  classhumasoft_1_1SoftNeckControl__coll__graph.map  classhumasoft_1_1SoftNeckControl__coll__graph.md5  classhumasoft_1_1SoftNeckControl__inherit__graph.map  classhumasoft_1_1SoftNeckControl__inherit__graph.md5  dir_6569545239549f10ee8d0de259763604.html  files.html  (+18 more)
libraries/YarpPlugins/docs/latex/: DeviceDriverImpl_8cpp.tex  DeviceDriverImpl_8cpp__incl.md5  ICartesianControlImpl_8cpp.tex  ICartesianControlImpl_8cpp__incl.md5  Kinematics_8cpp.tex  Kinematics_8cpp__incl.md5  PeriodicThreadImpl_8cpp.tex  PeriodicThreadImpl_8cpp__incl.md5  SerialStreamResponder_8cpp.tex  SerialStreamResponder_8cpp__incl.md5  SoftNeckControl_8cpp.tex  SoftNeckControl_8cpp__incl.md5  SoftNeckControl_8hpp.tex  SoftNeckControl_8hpp__dep__incl.md5  SoftNeckControl_8hpp__incl.md5  annotated.tex  classhumasoft_1_1SerialStreamResponder.tex  classhumasoft_1_1SerialStreamResponder__coll__graph.md5  classhumasoft_1_1SerialStreamResponder__inherit__graph.md5  classhumasoft_1_1SoftNeckControl.tex  classhumasoft_1_1SoftNeckControl__coll__graph.md5  classhumasoft_1_1SoftNeckControl__inherit__graph.md5  dir_6569545239549f10ee8d0de259763604.tex  files.tex  group__SoftNeckControl.tex  hierarchy.tex  modules.tex  namespacehumasoft.tex  namespaces.tex  refman.tex
libraries/YarpPlugins/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+18 more)
programs/: CMakeLists.txt  README.md
programs/joystickInputDemo/buttonPositionSend/: CMakeLists.txt  buttonPositionSend.cpp
programs/joystickInputDemo/continuousPositionSend/: CMakeLists.txt  continuousPositionSend.cpp
programs/motorVelController/: CMakeLists.txt  motorVelController.cpp
programs/stepInputDemo/: CMakeLists.txt  stepInputDemo.cpp
programs/threadVelocityController/: CMakeLists.txt  threadVelocityControl.cpp
programs/tightenTendons/: CMakeLists.txt  tightenTendons.cpp
share/: CMakeLists.txt
(+21 files in other folders)
